<resources>
    <string name="app_name">DogApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Texto de prueba</string>
    <string name="dogapp">DogApp</string>
    <string name="nueva_cita">Nueva Cita</string>
    <string name="nombre_de_la_mascota">Nombre de la mascota</string>
    <string name="raza">Raza</string>
    <string name="nombre_del_propietario">Nombre del propietario</string>
    <string name="telefono">Teléfono</string>
    <string name="guardar_cita">Guardar Cita</string>
    <string name="editar_cita">Editar Cita</string>
</resources>