<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.CreateAppointmentFragment"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                >

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_toolbar_background"
                    app:theme="@style/toolbarTheme"

                    >

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="50sp"
                        android:layout_height="50sp"
                        android:src="@drawable/ic_back_arrow"
                        android:clickable="true"

                        android:layout_gravity="start"
                        android:layout_marginStart="50sp"
                        android:focusable="true">

                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nueva_cita"
                        android:textSize="30sp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:layout_marginVertical="30sp"
                        android:textStyle="bold"

                        />


                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.fragment.CreateAppointmentFragment"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:padding="20dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPetName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:hint="@string/nombre_de_la_mascota"
                        android:maxLength="15"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:padding="20dp"
                    android:hint="@string/raza">

                    <com.example.dogapp.view.fragment.CustomAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:id="@+id/actvBreed"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:padding="20dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etOwnerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:hint="@string/nombre_del_propietario"
                        android:maxLength="30"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:padding="20dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:lines="1"
                        android:hint="@string/telefono"
                        android:maxLength="10"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spSymptoms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="20dp"/>

                <Button
                    android:id="@+id/btnSaveAppointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar_cita"
                    android:layout_gravity="center"
                    app:icon="@drawable/ic_save"
                    style="@style/ButtonPink"
                    android:enabled="false"
                    />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>