<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.dogapp.viewmodel.AppointmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.CreateAppointmentFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_toolbar_background"
                    app:theme="@style/toolbarTheme"

                    >

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="50sp"
                        android:layout_height="50sp"
                        android:layout_gravity="start"
                        android:layout_marginStart="50sp"

                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_back_arrow">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="30sp"
                        android:text="@string/editar_cita"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"

                        />


                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".view.fragment.UpdateAppointmentFragment">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPetName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_de_la_mascota"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:maxLength="15" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/raza"
                    android:padding="20dp">

                    <com.example.dogapp.view.fragment.CustomAutoCompleteTextView
                        android:id="@+id/actvBreed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etOwnerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_del_propietario"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:maxLength="30" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefono"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="10"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnUpdateAppointment"
                    style="@style/ButtonPink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:text="@string/editar_cita"
                    app:icon="@drawable/ic_edit" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</layout>